[package]
name = "avro-lua"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avro-rs = { git = "git://git@github.com/GregBowyer/avro-rs.git", branch = "recursive-types" }
serde_json = "1.0"
serde = "1.0"

[dependencies.mlua]
version = "0.6"
features = ["luajit", "module", "serialize", "vendored"]

[lib]
name = "avro"
crate-type = ["cdylib"]
